<resources>
    <string name="app_name">Citas</string>
    <string name="login_title">Login</string>
    <string name="user">Usuario</string>
    <string name="phoneNumber">Número Teléfono</string>
    <string name="password">Clave</string>
    <string name="remember">Recordar Clave</string>
    <string name="restorePassword">Recuperar contraseña</string>
    <string name="buttonRegister">Registrar</string>
    <string name="buttonLogin">Ingresar</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellidos</string>
    <string name="address">Domicilio</string>
    <string name="cp">Código Postal</string>
    <string name="city">Ciudad</string>
    <string name="state">Provincia</string>
    <string name="phone">Teléfono</string>
    <string name="buttonCancel">Cancelar</string>
    <string name="title_register">Registro</string>
    <string name="register_title">Registro</string>

</resources>
